--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -11,6 +11,7 @@
     // transform: skewY(-2deg);
     border-top-left-radius: 50% 5rem; /* Adjust the radius values as needed */
     border-top-right-radius: 50% 5rem;
+    margin-top: 5rem;
   }
   .heading {
     width: fit-content;
