--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -2,26 +2,6 @@
 
 
 
-
-#seperator{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-top: 17px;
-    @include md{
-        
-        display: none ;
-        
-    }
-    img{
-        width: 200px;
-        height: 14px;
-        @include md{
-            display: none;
-        }
-    }
-}
 .about-container{
     background: #242629;
     height: 100%;
@@ -29,12 +9,13 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 30px;
     @include md{
     width:100%;
 // background-color: antiquewhite;
-margin-top: 5rem;
-padding-bottom: 20px;
+// margin-top: 5rem;
+// padding-bottom: 20px;
+margin-top: 10px;
 height: 100vh;
 }
 .heading{
@@ -220,18 +201,19 @@ padding-top: 0.9rem;
     color: white;
     font-size: 1.5rem;
     font-weight: 600;
-    /* border: 1px solid white; */
+     border: 1px solid white; 
     // background: #464242;
     margin: 1rem;
     // box-shadow: 0px 7px 9px #2f2a2a;
     // box-shadow: 5px 5px 0 #2f2a2a;
     background-color: #9000ffd4;
         box-shadow: 5px 5px 0 rgb(88 0 109 / 96%);
-    border: none;
+    // border: none;
     border-radius: 5px;
     transition: transform 0.2s, box-shadow 0.2s;
     outline: none;
     cursor: pointer;
+
     filter: drop-shadow(-1px 1px 4px rgb(128, 128, 128));
         span{
             position: relative;
