--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -184,7 +184,7 @@ font-weight: normal;
     opacity: 0;
     animation: zoomIn 1s ease forwards;
     animation-delay: 1s;
-    
+    top: -30px;
     // box-sizing: border-box;
     // box-sizing: content-box;
     // display: none;
