--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -158,6 +158,7 @@
           color: #64748b;
           width: 100%;
           // display: none;
+          text-align: justify;
           
           p {
             font-weight: bold;
