--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -119,6 +119,7 @@
           img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
             border-radius: 5px;
           }
         }
